// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions.venues should create an action of type REQUEST_GET_VENUES_SEARCH 1`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Object {
    "ll": "40.7099,-73.9622",
  },
  "type": "REQUEST_GET_VENUES_SEARCH",
}
`;

exports[`actions.venues should create an action of type REQUEST_GET_VENUES_SEARCH 2`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Object {
    "intent": "match",
    "ll": "40.7099,-73.9622",
  },
  "type": "REQUEST_GET_VENUES_SEARCH",
}
`;

exports[`actions.venues should create an action of type REQUEST_GET_VENUES_SEARCH 3`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Object {
    "query": "ShopMart",
  },
  "type": "REQUEST_GET_VENUES_SEARCH",
}
`;

exports[`actions.venues should create an action of type REQUEST_GET_VENUES_SEARCH 4`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Object {
    "near": "Chicago, IL",
  },
  "type": "REQUEST_GET_VENUES_SEARCH",
}
`;

exports[`actions.venues should create an action of type REQUEST_GET_VENUES_SEARCH 5`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Object {
    "intent": "browse",
    "ll": "40.7099,-73.9622",
    "query": "ShopMart",
    "radius": 500,
  },
  "type": "REQUEST_GET_VENUES_SEARCH",
}
`;

exports[`actions.venues should create an action of type RESOLVE_GET_VENUES_SEARCH 1`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Array [],
  "type": "RESOLVE_GET_VENUES_SEARCH",
}
`;
